# Valdi

./: .bazelrc  MODULE.bazel
ai-skills/: registry.json
ai-skills/skills/valdi-inspect/: skill.md
ai-skills/skills/valdi-mock-breakdown/: skill.md
ai-skills/skills/valdi-mock-iterate/: skill.md
ai-skills/skills/valdi-mock-to-module/: skill.md
ai-skills/skills/valdi-mock-to-module/scripts/: diff.py  extract_colors.py  find_icon.py  snapshot-and-diff.sh  test_diff.py  test_extract_colors.py  test_find_icon.py  watch-and-diff.sh
ai-skills/skills/valdi-preview/: skill.md
ai-skills/skills/valdi-profile/: skill.md
ai-skills/skills/valdi-tsx/: skill.md
bzl/: dependencies.bzl  valdi_compiler_repos_extension.bzl  valdi_compiler_swift_deps.bzl
bzl/valdi/: BUILD.bazel  package.json.tmpl  valdi_collapse_web_paths.bzl  valdi_compiled.bzl  valdi_exported_library.bzl  valdi_module.bzl  valdi_paths.bzl  valdi_protodecl_to_js.bzl  valdi_toolchain.bzl
compiler/companion/src/: GenerateIds.spec.ts  GenerateIds.ts
compiler/compiler/: BUILD.bazel
compiler/compiler/Compiler/: Package.swift
compiler/compiler/Compiler/Sources/Config/: ExplicitImageAssetManifest.swift
compiler/compiler/Compiler/Sources/Generation/Cpp/: CppFunctionGenerator.swift
compiler/compiler/Compiler/Sources/Generation/ObjC/: ObjCCodeGenerator.swift
compiler/compiler/Compiler/Sources/Processors/: ClientSqlProcessor.swift  CombineNativeSourcesProcessor.swift  ImageResourcesProcessor.swift
compiler/compiler/Compiler/Sources/Utils/: ZstdCompressor.swift
compiler/compiler/Compiler/Tests/CompilerTests/: ZstdCompressorTests.swift
compiler/compiler/Compiler/Vendors/BlueSocket/: BUILD.bazel
compiler/compiler/Compiler/Vendors/Clibsass/: BUILD.bazel
compiler/compiler/Compiler/Vendors/SwiftCSSParser/: BUILD.bazel
compiler/compiler/Compiler/Vendors/Zstd/: BUILD.bazel
compiler/compiler/Compiler/Vendors/katana-parser/: BUILD.bazel
libs/dummy/: BUILD.bazel
libs/utils/src/utils/crypto/: AesEncryptor.cpp
libs/utils/src/utils/logging/: Logger.cpp  Logger.hpp
npm_modules/cli/: package-lock.json  package.json
npm_modules/cli/src/commands/: hotreload.ts  preview.ts  profile.ts
npm_modules/cli/src/commands/inspect_commands/: snapshot.spec.ts  snapshot.ts
npm_modules/cli/src/commands/profile_commands/: capture.ts
npm_modules/cli/src/commands/skills_commands/: install.ts  update.ts
npm_modules/cli/src/preview/: previewGenerator.spec.ts  previewGenerator.ts  viewModelParser.spec.ts  viewModelParser.ts
npm_modules/cli/src/utils/: daemonClient.ts  hermesClient.ts  skillsAdapters.ts  skillsRegistry.ts  stringUtils.spec.ts
npm_modules/cli/test/: hermesClient.spec.ts
npm_modules/eslint-plugin-valdi/: package-lock.json  package.json
npm_modules/eslint-plugin-valdi/src/rules/: jsx-no-lambda.ts  no-react-patterns.ts
npm_modules/eslint-plugin-valdi/tests/rules/: jsx-no-lambda.test.ts  no-react-patterns.test.ts
snap_drawing/src/snap_drawing/cpp/Layers/: ExternalLayer.cpp
src/valdi_modules/src/valdi/foundation/: BUILD.bazel
src/valdi_modules/src/valdi/foundation/src/: DeferredPromise.ts  equality.ts
src/valdi_modules/src/valdi/foundation/test/: DeferredPromise.spec.ts
src/valdi_modules/src/valdi/valdi_core/src/: Component.ts  ModuleLoader.ts
src/valdi_modules/src/valdi/valdi_tsx/: BUILD.bazel
src/valdi_modules/src/valdi/valdi_tsx/web/: JSX.stub.d.ts
src/valdi_modules/src/valdi/web_renderer/: BUILD.bazel
src/valdi_modules/src/valdi/web_renderer/src/: HTMLRenderer.ts  ValdiWebRenderer.ts  ValdiWebRendererDelegate.ts  ValdiWebRuntime.ts
src/valdi_modules/src/valdi/web_renderer/test/: ValdiWebRuntimeTiming.spec.ts
valdi/src/java/com/snap/valdi/: AsyncValdiViewLoader.kt  IValdiRuntime.kt  NoOpValdiViewLoader.kt  ScopedValdiViewLoader.kt  ValdiRuntime.kt  (+2 more)
valdi/src/valdi/android/: AndroidViewHolder.cpp  AndroidViewHolder.hpp  NativeBridge.cpp  NativeBridge.hpp  RuntimeManagerWrapper.cpp  RuntimeManagerWrapper.hpp  RuntimeWrapper.cpp  RuntimeWrapper.hpp  ViewManager.cpp  ViewManager.hpp
valdi/src/valdi/android/snap_drawing/: AndroidSnapDrawingRuntime.cpp  AndroidSnapDrawingRuntime.hpp  AndroidSurfacePresenterManager.cpp  AndroidSurfacePresenterManager.hpp  SnapDrawingLayerRootHost.cpp  SnapDrawingLayerRootHost.hpp
valdi/src/valdi/ios/: SCValdiContext.mm  SCValdiJSRuntimeImpl.m  SCValdiJSRuntimeImpl.mm  SCValdiJSWorker.mm  SCValdiRuntime.mm  SCValdiRuntimeManager.mm
valdi/src/valdi/ios/Categories/: UIView+Valdi.m
valdi/src/valdi/ios/NativeModules/: SCValdiDeviceModule.m
valdi/src/valdi/jscore/: JSCoreUtils.cpp
valdi/src/valdi/runtime/: Runtime.cpp  Runtime.hpp  ValdiRuntimeTweaks.cpp  ValdiRuntimeTweaks.hpp
valdi/src/valdi/runtime/Context/: Context.cpp  Context.hpp  ContextManager.cpp  ContextManager.hpp
valdi/src/valdi/runtime/Debugger/: TCPClient.cpp  TCPConnectionImpl.hpp  TCPServerImpl.cpp  TCPServerImpl.hpp
valdi/src/valdi/runtime/JavaScript/: JavaScriptRuntime.cpp  JavaScriptRuntime.hpp
valdi/src/valdi/runtime/Resources/: ResourceManager.cpp  ResourceManager.hpp  ZStdUtils.cpp
valdi/test/integration/: Runtime_tests.cpp
valdi/test/runtime/: DebuggerService_tests.cpp  Measure_tests.cpp  ZStdUtils_tests.cpp
valdi_core/: valdi_core.djinni
valdi_core/generated-src/cpp/valdi_core/: JSRuntime.hpp  JSRuntimeNativeObjectsManager.hpp
valdi_core/generated-src/jni/valdi_core/: NativeJSRuntime.cpp
valdi_core/generated-src/objc/valdi_core/: SCNValdiCoreJSRuntime+Private.mm  SCNValdiCoreJSRuntime.h  SCNValdiCoreJSRuntimeNativeObjectsManager.h
valdi_core/generated-src/ts/: valdi_core.ts
valdi_core/src/valdi_core/cpp/Context/: ContextBase.cpp  ContextBase.hpp
valdi_core/src/valdi_core/cpp/Marshalling/: CppGeneratedExportedFunctionUtils.cpp  CppGeneratedExportedFunctionUtils.hpp
valdi_core/src/valdi_core/ios/swift/: SwiftComponentBase.swift  ValdiMarshallableObjectDescriptor.swift  ValdiMarshaller.swift
valdi_core/src/valdi_core/ios/valdi_core/: SCValdiConfiguration.h  SCValdiContextProtocol.h  SCValdiJSRuntime.h  SCValdiRootView.h  SCValdiTouches.mm
(+13 files in other folders)
