load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "SwiftCSSParser",
    srcs = glob(["Sources/*.swift"]),
    copts = ["-DSWIFT_PACKAGE"],
    module_name = "SwiftCSSParser",
    visibility = ["//visibility:public"],
    deps = ["//compiler/compiler/Compiler/Vendors/katana-parser:KatanaParser"],
)
