load("@build_bazel_rules_swift//swift:swift.bzl", "swift_interop_hint")

swift_interop_hint(
    name = "swift_interop",
    module_name = "KatanaParser",
)

cc_library(
    name = "KatanaParser",
    srcs = glob(
        [
            "Sources/*.c",
            "Sources/*.h",
        ],
        exclude = ["Sources/include/**"],
    ),
    hdrs = glob(["Sources/include/*.h"]),
    aspect_hints = [":swift_interop"],
    includes = ["Sources/include"],
    visibility = ["//visibility:public"],
)
